--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
   padding: 0;
   font-family: "Raleway", sans-serif;
 }
+/* Header starts here */
 ul {
   list-style: none;
+}
+[alt="logo"]{
+  width: 130px;
 }
 header {
   font-weight: 600;
@@ -29,6 +33,9 @@ nav ul {
   border: none;
   padding: 10px 15px;
 }
+/* Header Ends Here */
+
+/* Hero section starts here */
 .hero-section {
   background-color: rgb(134, 23, 245);
   color: #ffffff;
@@ -36,26 +43,33 @@ nav ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  height: 100vh;
 }
-.text-section {
-  height: fit-content;
-  margin: 20px;
-  width: 30vw;
+.text-section{
+  padding: 20px;
+  height: 75%;
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.hero-img {
-  height: 85vh;
-  margin: 20px;
-  margin-top: 5vh;
-  width: 50vw;
+.text-section h1{
+  font-size: 55px;
+  margin-bottom: 20px;
 }
-.text-section h1 {
-  margin-left: -2vw;
-  margin-bottom: 5vh;
-  font-size: 3em;
+.text-section p{
+  font-size: 20px;
 }
-.hero-section img {
-  height: 85vh;
+.hero-img{
+  padding: 20px;
+  height: 75%;
+  width: 55%;
 }
+.hero-img img{
+  width: 80%;
+}
+/* Section-02 */
 .sec-02 {
   display: flex;
   align-items: center;
@@ -111,4 +125,91 @@ nav ul {
   width: 70%;
   margin: 0 auto;
   border-radius: 20px;
+}
+/* Media Query */
+@media(max-width: 850px) {
+  /* Navbar */
+  nav{
+    display: none;
+  }
+  [alt="hamburger"]{
+    display: block;
+  }
+  /* Hero Section */
+  .hero-section{
+    flex-direction: column;
+    justify-content: center;
+    height: fit-content;
+  }
+  .hero-img{
+   width: fit-content;
+   height: fit-content;
+   padding: 5px;
+  }
+  .hero-img img{
+    width: 85%;
+    margin: 0 auto;
+    padding: 10px;
+  }
+  .text-section{
+    width: 85%;
+    margin: 0 auto;
+    height: fit-content;
+    text-align: center;
+  }
+  .text-section h1{
+    font-size: 35px;
+    margin-top: 10px;
+  }
+  .text-section p{
+    font-size: 20px;
+  }
+  /* Section-02 */
+  .sec-02{
+    flex-direction: column;
+  }
+  .sec-02-img{
+    width: 90%;
+    height: fit-content;
+    padding: 5px;
+    margin: 0 auto;
+  }
+  .sec-02 img{
+    width: fit-content;
+    height: fit-content;
+  }
+  .sec-02 .text-section{
+    width: 100%;
+    padding: 0;
+    text-align: center;
+  }
+  .sec-02 .text-section h1 {
+    font-size: 30px;
+}
+  .sec-02 .text-section p {
+    font-size:10px;
+    margin: 1vh 0;
+  }
+
+  .sec-03 .heading h1{
+    width: fit-content;
+  }
+  .cards{
+    flex-direction: column;
+  }
+  .card{
+    margin: 20px auto;
+    width: 75%;
+  }
+  .card .text {
+    padding: 25px;
+    text-align: center;
+    margin: 5px auto;
+  }
+.cards img {
+  margin: 5px auto;
+  width: 63%;
+  margin: 0 auto;
+  display: block;
+}
 }
